--- a/SWPROJECT-N00212272/resources/sass/app.scss
+++ b/SWPROJECT-N00212272/resources/sass/app.scss
@@ -1,8 +1,32 @@
 // Fonts
-@import url('https://fonts.bunny.net/css?family=Nunito');
-
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
+$font-family-base: 'Source Sans Pro', sans-serif;
+$display-secondary-font-family: 'Oswald', sans-serif;
+.display-secondary {
+    font-family: $display-secondary-font-family;
+   
+} 
 // Variables
 @import 'variables';
+$primary:rgb(183, 173, 207);
+$secondary:rgb(5, 41, 158);
+$success:rgb(144,238,144);
+$danger:rgb(255, 127, 127);
+//created a new spacer to 
+$spacer:1rem;
+$spacers:(
+    1:$spacer *0.25,
+    2:$spacer *0.50,
+    3:$spacer,
+    4:$spacer * 2,
+    5:$spacer *3, 
+    6:$spacer *4,
+);
 
+.card:hover{
+    transform: scale(1.02)
+}
 // Bootstrap
 @import 'bootstrap/scss/bootstrap';
+
